замена JDK с 22 на 1,8, доработка структуры и отображения каталога товаров